@@ -19,6 +19,7 @@
     <File name="./Mono.Data.Sql.MySql.addin.xml" subtype="Code" buildaction="FileCopy" />
     <File name="./MySqlDbFactory.cs" subtype="Code" buildaction="Compile" />
     <File name="./Schema" subtype="Directory" buildaction="Compile" />
+    <File name="./MySqlPooledDbConnection.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
