@@ -1,3 +1,10 @@
+2007-07-14  Ben Motmans <ben.motmans@gmail.com>
+
+	* MySqlConnectionProvider.cs, MySqlDbFactory.cs, MySqlSchemaProvider.cs: small changes
+	to reflect API changes
+	* MySqlPooledDbConnection.cs: implementation of ConnectionPool aware connection
+	
+
 2007-07-10  Ben Motmans <ben.motmans@gmail.com>
 
 	* MySqlConnectionProvider.cs: set IsConnectionError property
